--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,6 +6,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css"/>
     <script>
       const signOut = async () => {
         const res = await fetch("/signout", {
@@ -17,10 +18,11 @@
           document.getElementById("err").style.display = "block";
           setTimeout(() => {
             window.location.href = "/";
-          }, 1700);
+          }, 1500);
         }
       };
     </script>
+    <script src="script.js"></script>
     <style>
       .navbar1{
         background: rgb(16, 16, 71)!important;
@@ -30,7 +32,7 @@
   <body>
     <nav class="navbar bg-body-tertiary navbar1">
       <div class="container-fluid" >
-        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;">iNote</span>
+        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;">iNote <i class="fa-duotone fa-file-pen"></i></span>
       </div>
     </nav>
     <div class="container mt-5">
@@ -44,7 +46,7 @@
         role="alert"
         style="display: none"
       >
-        User Logged out .. Redirecting to Login Page !!
+        User Logged out .. Redirecting you to Login Page !!
       </div>
       <hr>
       <div class="cotainer-sm text-end">
@@ -52,16 +54,22 @@
       </div>
       <div class="container-sm">
         <div class="row row-cols-3">
-          <% userNotes.forEach(function(note) { %>
+          <% if (userNotes.length === 0 || userNotes===null) { %>
             <div class="col mt-4">
-              <div class="card col">
-                <div class="card-body">
-                  <h5 class="card-title"><%= note.title %></h5>
-                  <p class="card-text"><%= note.content %></p>
+              <p>No Notes added yet. Please add one !</p>
+            </div>
+          <% } else { %>
+            <% userNotes.forEach(function(note) { %>
+              <div class="col mt-4">
+                <div class="card col">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= note.title %></h5>
+                    <p class="card-text"><%= note.content %></p>
+                  </div>
                 </div>
               </div>
-            </div>
-          <% }); %>
+            <% }); %>
+          <% } %>
         </div>
       </div>
       
