--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -22,17 +22,38 @@
       };
     </script>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
       .navbar1{
-        background: rgb(16, 16, 71)!important;
+        background: #09203F!important;
       }
+      .modal-header{
+        color: white;
+        background: linear-gradient(145deg,#0c1657,#083167);
+        font-family: Georgia, 'Times New Roman', Times, serif ;
+      }
+      .btn-close{
+        background-color: rgb(81, 106, 196);
+      }
+      hr{
+        background: rgb(22, 1, 92);
+        height: 5px;
+      }
+      .card-body{
+        box-shadow: 0 0 5px rgba(210, 104, 18, 0.945),
+              0 0 10px rgba(232, 232, 43, 0.963),
+              0 0 15px rgba(143, 155, 6, 0.489),
+              0 2px 0 black;
+      }
+      
     </style>
   </head>
   <body>
     <nav class="navbar bg-body-tertiary navbar1">
       <div class="container-fluid" >
-        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;">iNote</span>
+        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;font-family: 'Berkshire Swash', cursive;">iNote</span>
       </div>
     </nav>
+    
     <div class="container mt-5">
       <div class="jumbotron">
         <h1 class="display-4">Welcome, <%= userData.name %>!</h1>
@@ -48,7 +69,7 @@
       </div>
       <hr>
       <div class="cotainer-sm text-end">
-        <button class="btn btn-primary" onclick="">+ Add New Note</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Add New Note</button>
       </div>
       <div class="container-sm">
         <div class="row row-cols-3">
@@ -66,6 +87,36 @@
       </div>
       
     </div>
+    <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade newNote" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          New Note
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">New Title</label>
+          <input type="text" class="form-control" id="note-title" placeholder="">
+        </div>
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="" id="note-content" style="height: 100px"></textarea>
+          <label for="floatingTextarea2">Content</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Add Note</button>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="scrpt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
