--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,7 +6,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css"/>
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css"
+    />
     <script>
       const signOut = async () => {
         const res = await fetch("/signout", {
@@ -22,44 +25,45 @@
         }
       };
     </script>
-    <script src="script.js"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
-      .navbar1{
-        background: #09203F!important;
+      @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+      .navbar1 {
+        background: #09203f !important;
       }
-      .modal-header{
+      .modal-header {
         color: white;
-        background: linear-gradient(145deg,#0c1657,#083167);
-        font-family: Georgia, 'Times New Roman', Times, serif ;
+        background: linear-gradient(145deg, #0c1657, #083167);
+        font-family: Georgia, "Times New Roman", Times, serif;
       }
-      .btn-close{
+      .btn-close {
         background-color: rgb(81, 106, 196);
       }
-      hr{
+      hr {
         background: rgb(22, 1, 92);
         height: 5px;
       }
-      .card-body{
+      .card-body {
         box-shadow: 0 0 5px rgba(210, 104, 18, 0.945),
-              0 0 10px rgba(232, 232, 43, 0.963),
-              0 0 15px rgba(143, 155, 6, 0.489),
-              0 2px 0 black;
+          0 0 10px rgba(232, 232, 43, 0.963), 0 0 15px rgba(143, 155, 6, 0.489),
+          0 2px 0 black;
       }
-      
     </style>
   </head>
   <body>
     <nav class="navbar bg-body-tertiary navbar1">
-      <div class="container-fluid" >
-<<<<<<< HEAD
-        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;font-family: 'Berkshire Swash', cursive;">iNote</span>
-=======
-        <span class="navbar-brand mb-0 h1" style="color: white;padding: 0.8rem!important;font-size:30px;">iNote <i class="fa-duotone fa-file-pen"></i></span>
->>>>>>> 63438bfe37d3d8ee2120dd7efe4cc4b1d1a764aa
+      <div class="container-fluid">
+        <span
+          class="navbar-brand mb-0 h1"
+          style="
+            color: white;
+            padding: 0.8rem !important;
+            font-size: 30px;
+            font-family: 'Berkshire Swash', cursive;
+          "
+          >iNote <i class="fa-duotone fa-file-pen"></i>
+          </span>
       </div>
     </nav>
-    
     <div class="container mt-5">
       <div class="jumbotron">
         <h1 class="display-4">Welcome, <%= userData.name %>!</h1>
@@ -73,63 +77,123 @@
       >
         User Logged out .. Redirecting you to Login Page !!
       </div>
-      <hr>
+      <hr />
       <div class="cotainer-sm text-end">
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Add New Note</button>
+        <button
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          + Add New Note
+        </button>
       </div>
       <div class="container-sm">
         <div class="row row-cols-3">
           <% if (userNotes.length === 0 || userNotes===null) { %>
-            <div class="col mt-4">
-              <p>No Notes added yet. Please add one !</p>
-            </div>
-          <% } else { %>
-            <% userNotes.forEach(function(note) { %>
-              <div class="col mt-4">
-                <div class="card col">
-                  <div class="card-body">
-                    <h5 class="card-title"><%= note.title %></h5>
-                    <p class="card-text"><%= note.content %></p>
-                  </div>
-                </div>
+          <div class="col mt-4">
+            <p>No Notes added yet. Please add one !</p>
+          </div>
+          <% } else { %> <% userNotes.forEach(function(note) { %>
+          <div class="col mt-4">
+            <div class="card col">
+              <div class="card-body">
+                <h5 class="card-title"><%= note.title %></h5>
+                <p class="card-text"><%= note.content %></p>
               </div>
-            <% }); %>
-          <% } %>
+            </div>
+          </div>
+          <% }); %> <% } %>
         </div>
       </div>
-      
     </div>
     <!-- Button trigger modal -->
 
+    <!-- Modal -->
+    <div
+      class="modal fade newNote"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">New Note</h1>
+            <button
+              type="button"
+              class="btn-close"
+              id="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="formGroupExampleInput" class="form-label"
+                >Note Title</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="note-title"
+                name="formGroupExampleInput"
+              />
+            </div>
 
-<!-- Modal -->
-<div class="modal fade newNote" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">
-          New Note
-        </h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">New Title</label>
-          <input type="text" class="form-control" id="note-title" placeholder="">
+            <div class="mb-3">
+              <label for="floatingTextarea2" class="form-label">Content</label>
+              <textarea
+                class="form-control"
+                name="floatingTextarea2"
+                id="note-content"
+                style="height: 100px"
+              ></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-danger"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" onclick="onAdd()">
+              Add Note
+            </button>
+          </div>
         </div>
-        <div class="form-floating">
-          <textarea class="form-control" placeholder="" id="note-content" style="height: 100px"></textarea>
-          <label for="floatingTextarea2">Content</label>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Add Note</button>
       </div>
     </div>
-  </div>
-</div>
-    <script src="scrpt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      
+      // function to add new note 
+      const onAdd = async () => {
+        const title = document.getElementById("note-title").value;
+        const content = document.getElementById("note-content").value;
+        const closeButton = document.getElementById("btn-close");
+
+        const res = await fetch("/addnote", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ title, content }),
+        });
+
+        const msg = await res.json();
+
+        if (msg.code === "Success") {
+          //Remove the model and show added toast !!
+          closeButton.click();
+          alert("Note added successfully !");
+          location.reload();
+        } else {
+          alert("Error in adding note");
+        }
+      };
+    </script>
   </body>
 </html>
