--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -167,33 +167,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      
-      // function to add new note 
-      const onAdd = async () => {
-        const title = document.getElementById("note-title").value;
-        const content = document.getElementById("note-content").value;
-        const closeButton = document.getElementById("btn-close");
-
-        const res = await fetch("/addnote", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ title, content }),
-        });
-
-        const msg = await res.json();
-
-        if (msg.code === "Success") {
-          //Remove the model and show added toast !!
-          closeButton.click();
-          alert("Note added successfully !");
-          location.reload();
-        } else {
-          alert("Error in adding note");
-        }
-      };
-    </script>
+    <script src="addNote.js"></script>
   </body>
 </html>
