--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -10,39 +10,7 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css"
     />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
-      .navbar1 {
-        background: #09203f !important;
-      }
-      .modal-header {
-        color: white;
-        background: linear-gradient(145deg, #0c1657, #083167);
-        font-family: Georgia, "Times New Roman", Times, serif;
-      }
-      .btn-close {
-        background-color: rgb(81, 106, 196);
-      }
-      hr {
-        background: rgb(22, 1, 92);
-        height: 5px;
-      }
-      .card-body {
-        box-shadow: 0 0 5px rgba(210, 104, 18, 0.945),
-          0 0 10px rgba(232, 232, 43, 0.963), 0 0 15px rgba(143, 155, 6, 0.489),
-          0 2px 0 black;
-      }
-      .edit-delete-icons {
-        display: none;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-      }
-
-      .card:hover .edit-delete-icons {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
     <nav class="navbar bg-body-tertiary navbar1">
@@ -98,7 +66,7 @@
                 <p class="card-text"><%= note.content %></p>
                 <div class="edit-delete-icons">
                   <a href="#" class="edit-icon"><i class="fas fa-edit"></i></a>
-                  <a href="#" class="delete-icon"><i class="fas fa-trash"></i></a>
+                  <a class="delete-icon" data-note-id="<%= note._id %>"><i class="fas fa-trash"></i></a>
                 </div>
               </div>
             </div>
@@ -170,5 +138,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="addNote.js"></script>
     <script src="signout.js"></script>
+    <script src="deleteNote.js"></script>
   </body>
 </html>
