--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -66,7 +66,10 @@
                 <h6 class="card-subtitle mb-2 text-muted"><%=note.time%></h6>
                 <p class="card-text"><%= note.content %></p>
                 <div class="edit-delete-icons">
-                  <a class="edit-icon" onclick="openEditModal('<%= note._id %>', '<%= note.title %>', '<%= note.content %>')">
+                  <a
+                    class="edit-icon"
+                    onclick="openEditModal('<%= note._id %>', '<%= note.title %>', '<%= note.content %>')"
+                  >
                     <i class="fas fa-edit"></i>
                   </a>
                   <a class="delete-icon" data-note-id="<%= note._id %>"
@@ -144,32 +147,96 @@
         </div>
       </div>
     </div>
-    <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+    <button type="button" class="btn btn-primary" style="display: none;" id="liveToastBtn">
+    </button>
 
-<div class="toast-container position-fixed bottom-0 end-0 p-3">
-  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <strong class="me-auto">iNote</strong>
-      <small>Just Now</small>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div
+        id="liveToast-1"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header">
+          <strong class="me-auto">iNote</strong>
+          <small>Just Now</small>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="toast-body" id="toast-content"></div>
+      </div>
     </div>
-    <div class="toast-body">
-      New Note Added
+    <!-- Edit Note Modal -->
+    <div
+      class="modal fade"
+      id="editNoteModal"
+      tabindex="-1"
+      aria-labelledby="editNoteModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editNoteModalLabel">Edit Note</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <form onsubmit="return false" id="editNoteForm">
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="editNoteTitle" class="form-label">Note Title</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="editNoteTitle"
+                  name="editNoteTitle"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="editNoteContent" class="form-label">Content</label>
+                <textarea
+                  class="form-control"
+                  id="editNoteContent"
+                  name="editNoteContent"
+                  style="height: 100px"
+                  required
+                ></textarea>
+              </div>
+            </div>
+          </form>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-danger"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary" onclick="onEdit()">
+              Save Changes
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="homepage.js"></script>
     <script>
       const toastTrigger = document.getElementById("liveToastBtn");
-      const toastLiveExample = document.getElementById("liveToast");
 
       if (toastTrigger) {
-        const toastBootstrap =
-          bootstrap.Toast.getOrCreateInstance(toastLiveExample);
-        toastTrigger.addEventListener("click", () => {
-          toastBootstrap.show();
-        });
+
       }
     </script>
   </body>
