--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -71,11 +71,11 @@
                     class="edit-icon"
                     onclick="openEditModal('<%= note._id %>', '<%= note.title %>', '<%= note.content %>')"
                   >
-                    <i class="fas fa-edit" style="color:grey"></i>
+                    <i class="fas fa-edit" title="Edit Note" style="color:grey"></i>
                   </a>
                   <a class="delete-icon" data-note-id="<%= note._id %>"
                     >
-                    <i class="fas fa-trash" style="color:red"></i
+                    <i class="fas fa-trash" title="Delete Note" style="color:red"></i
                   ></a>
                 </div>
               </div>
