--- a/static/style.css
+++ b/static/style.css
@@ -10,3 +10,19 @@ input[type=password]:focus, input[type=email]:focus, input[type=text]:focus {
     border-color: black;
     box-shadow: 2px 2px 0px 2px rgba(52, 152, 219, 0.5);
 }
+.col-md-6{
+    /* From https://css.glass */
+  background: rgba(10, 51, 109, 0.07);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.6px);
+  -webkit-backdrop-filter: blur(9.6px);
+  padding: 50px;
+  box-shadow: 0 0 2px #05197a7d,
+    0 0 2px #05197a7d, 0 0 2px #05197a7d,
+    0 2px 0 black;
+}
+body{
+    background-image: url("back.avif");
+    background-size: 100vw 100vh;
+}
