--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -31,7 +31,7 @@
       <div class="jumbotron">
         <h1 class="display-4">Welcome, <%= userData.name %>!</h1>
       </div>
-      <button class="btn btn-danger mt-3" onclick="signOut()">
+      <button id="Logout" class="btn btn-danger mt-3" onclick="signOut()">
         Logout &nbsp;<i class="fa-duotone fa-right-from-bracket"></i>
       </button>
       <div
