updated share modal

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -96,6 +96,7 @@
                 </div>
                 <div class="text-end" style="font-size: 0.8rem;">
                   <% if(note.sharedBy!=''){ %>
+                    <i class="fa-solid fa-share-nodes"></i>&nbsp;
                     Shared By : <%= note.sharedBy %>
                   <% } %>
                 </div>
