--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -29,7 +29,7 @@
     </nav>
     <div class="container mt-5">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome, <%= userData.name %>!</h1>
+        <h1 id="welcome" class="display-4" email='<%=userData.email%>'>Welcome, <%= userData.name %>!</h1>
       </div>
       <button id="Logout" class="btn btn-danger mt-3" onclick="signOut()">
         Logout &nbsp;<i class="fa-duotone fa-right-from-bracket"></i>
