added margin-bottom for last card

--- a/static/homepage.css
+++ b/static/homepage.css
@@ -64,9 +64,13 @@ body{
   overflow-x: hidden;
   background: linear-gradient(135deg ,#abcfff, #c9e7f7);
   min-width: 100vw;
-  min-height: 100vh;
-  
+  min-height: 100vh;  
 }
+
+.row:last-child {
+  margin-bottom: 2rem; 
+}
+
 
 
 
