--- a/static/homepage.css
+++ b/static/homepage.css
@@ -59,7 +59,6 @@ hr {
   }
 }
 
-
 body{
   overflow-x: hidden;
   background: linear-gradient(135deg ,#abcfff, #c9e7f7);
@@ -70,7 +69,17 @@ body{
 .row:last-child {
   margin-bottom: 2rem; 
 }
-
+#delToast{
+  background-color: white;
+  box-shadow: 0 0 1px #000000,
+              0 0 1px #000000,
+              0 0 3px #000000,
+              0 1px 0 #000000;;
+  position:relative;
+  top: 300px;
+  right: 550px;
+  padding: 10px;
+}
 
 
 
