--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -298,7 +298,17 @@
         </div>
       </div>
     </div>
-
+    <!-- delete toast -->
+    <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+    <div class="toast position-absolute top" id="delToast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-body" >
+        Are you sure want to delete the note?
+        <div class="mt-2 pt-2 border-top">
+          <button type="button" class="btn btn-danger btn-sm">Yes</button>
+          <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="toast">No</button>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="homepage.js"></script>
   </body>
