--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -299,12 +299,12 @@
       </div>
     </div>
     <!-- delete toast -->
-    <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+
     <div class="toast position-absolute top" id="delToast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-body" >
         Are you sure want to delete the note?
         <div class="mt-2 pt-2 border-top">
-          <button type="button" class="btn btn-danger btn-sm">Yes</button>
+          <button type="button" id="confirm-del" class="btn btn-danger btn-sm">Yes</button>
           <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="toast">No</button>
         </div>
       </div>
