--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -300,7 +300,7 @@
     </div>
     <!-- delete toast -->
 
-    <div class="toast position-absolute top" id="delToast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast position-absolute top-50 start-50 translate-middle" id="delToast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-body" >
         Are you sure want to delete the note?
         <div class="mt-2 pt-2 border-top">
